Update dependency org.robolectric:robolectric to v4.17 (#1506)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Jon Poulton <jpoulton@pm.me>